# social

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  utils.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_managers.py  0004_customuser_avatar.py  0005_alter_customuser_email.py
accounts/serializers/: __init__.py  auth_serializers.py  detail_serializers.py  user_edit_serializers.py
accounts/views/: __init__.py  auth_views.py  detail_views.py  user_edit_views.py  user_follow_views.py
chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
chat/consumers/: __init__.py  chat_consumer.py  db_usecases.py
chat/migrations/: 0001_initial.py  0002_alter_chat_options_alter_chat_unique_together_and_more.py
config/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  usecases.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_comment_options_alter_post_options.py
posts/tests/: test_comment.py  test_like.py  test_post_save.py
posts/views/: __init__.py  other_views.py  posts_views.py
social/: asgi.py  channelsmiddleware.py  settings.py  urls.py  wsgi.py
social/accounts/: admin.py  apps.py  models.py  services.py  urls.py
social/chat/: apps.py  routing.py  serializers.py  services.py  views.py
social/posts/: apps.py  models.py  permissions.py  serializers.py  urls.py
(+19 files in other folders)
