[tool.poetry]
name = "social"
version = "0.1.0"
description = "Backend for social network app or website"
authors = ["Zhumagulov Torokeldi <zhumagulovtorokeldi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.0.5"
djangorestframework = "3.13.1"
djangorestframework-simplejwt = "5.2.0"
django-cors-headers = "3.13.0"
django-environ = "0.9.0"
drf-spectacular = "0.24.2"
django-debug-toolbar = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
